Change days to seminars

--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -39,15 +39,15 @@ The schedule for the different curricula are listed here:
 {% elsif site.curriculum == "dc-socsci" %}
 
 <div class="row">
-  <h3>Weekly from 12 - 14 on Tuesdays and 10 - 13/13 - 16 on Fridays, Copenhagen time</h3>
+  <h3>Lecture from 12 - 14 on Tuesdays, seminars at 10 - 13/13 - 16 on Fridays, CEST </h3>
     <table class="table table-striped">
         <tr><td>Before starting</td><td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank">Pre-workshop survey</a></td></tr>
-        <tr><td>Tue 02 Nov</td> <td> <a href="https://librarycarpentry.org/lc-data-intro/">Introduction to Regular Expressions</a> </td></tr>
-	<tr><td>Thu 09 Nov</td><td><a href="https://datacarpentry.org/spreadsheets-socialsci/">Data Organization in Spreadsheets</a> </td></tr>
-        <tr><td>Thu 16 Nov</td><td><a href="https://datacarpentry.org/openrefine-socialsci/">OpenRefine for Data Cleaning</a></td></tr>
-	<tr><td>Thu 23 Nov</td><td><a href="https://datacarpentry.org/r-socialsci/">Introduction to R</a></td></tr>
-	<tr><td>Thu 30 Dec</td><td><a href="https://datacarpentry.org/r-socialsci/">Crunching and Visualising Data in R</a></td></tr>
-	<tr><td>Thu 07 Dec</td><td><a href="www.github.com/adivea/Leaflet">Texmining and Interactive Maps in R</a></td></tr>
+        <tr><td>Fri 05 Nov</td> <td> <a href="https://librarycarpentry.org/lc-data-intro/">Introduction to Regular Expressions</a> </td></tr>
+	<tr><td>Fri 12 Nov</td><td><a href="https://datacarpentry.org/spreadsheets-socialsci/">Data Organization in Spreadsheets</a> </td></tr>
+        <tr><td>Fri 19 Nov</td><td><a href="https://datacarpentry.org/openrefine-socialsci/">OpenRefine for Data Cleaning</a></td></tr>
+	<tr><td>Fri 26 Nov</td><td><a href="https://datacarpentry.org/r-socialsci/">Introduction to R</a></td></tr>
+	<tr><td>Fri 03 Dec</td><td><a href="https://datacarpentry.org/r-socialsci/">Crunching and Visualising Data in R</a></td></tr>
+	<tr><td>Fri 10 Dec</td><td><a href="www.github.com/adivea/Leaflet">Texmining and Interactive Maps in R</a></td></tr>
 	<tr><td>END</td><td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey</a></td>
       </tr>
      </table>
