--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -43,11 +43,11 @@ The schedule for the different curricula are listed here:
     <table class="table table-striped">
         <tr><td>Before starting</td><td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank">Pre-workshop survey</a></td></tr>
         <tr><td>Fri 05 Nov</td> <td> <a href="https://librarycarpentry.org/lc-data-intro/">Introduction to Regular Expressions</a> </td></tr>
-	<tr><td>Fri 12 Nov</td><td><a href="https://datacarpentry.org/spreadsheets-socialsci/">Data Organization in Spreadsheets</a> </td></tr>
-        <tr><td>Fri 19 Nov</td><td><a href="https://datacarpentry.org/openrefine-socialsci/">OpenRefine for Data Cleaning</a></td></tr>
-	<tr><td>Fri 26 Nov</td><td><a href="https://datacarpentry.org/r-socialsci/">Introduction to R</a></td></tr>
-	<tr><td>Fri 03 Dec</td><td><a href="https://datacarpentry.org/r-socialsci/">Crunching and Visualising Data in R</a></td></tr>
-	<tr><td>Fri 10 Dec</td><td><a href="www.github.com/adivea/Leaflet">Texmining and Interactive Maps in R</a></td></tr>
+	<tr><td>Fri 12 Nov</td><td><a href="https://datacarpentry.org/spreadsheets-socialsci/">Data Organization in Spreadsheets</a> <a href="https://datacarpentry.org/openrefine-socialsci/">OpenRefine for Data Cleaning</a> </td></tr>
+        <tr><td>Fri 19 Nov</td><td><a href="https://datacarpentry.org/r-socialsci/">Introduction to R</a></td></tr>
+	<tr><td>Fri 26 Nov</td><td><a href="https://datacarpentry.org/r-socialsci/">Crunching and Visualising Data in R</a></td></tr>
+	<tr><td>Fri 03 Dec</td><td><a href="https://github.com/Digital-Methods-HASS/CDS_W12">Texmining and Sentiment Analysis in R</a></td></tr>
+	<tr><td>Fri 10 Dec</td><td><a href="www.github.com/adivea/Leaflet">Interactive Maps in R</a></td></tr>
 	<tr><td>END</td><td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey</a></td>
       </tr>
      </table>
