Fix Leaflet URL

--- a/_includes/dc/schedule.html
+++ b/_includes/dc/schedule.html
@@ -47,7 +47,7 @@ The schedule for the different curricula are listed here:
         <tr><td>Fri 19 Nov</td><td><a href="https://datacarpentry.org/r-socialsci/">Introduction to R</a></td></tr>
 	<tr><td>Fri 26 Nov</td><td><a href="https://datacarpentry.org/r-socialsci/">Crunching and Visualising Data in R</a></td></tr>
 	<tr><td>Fri 03 Dec</td><td><a href="https://github.com/Digital-Methods-HASS/CDS_W12">Texmining and Sentiment Analysis in R</a></td></tr>
-	<tr><td>Fri 10 Dec</td><td><a href="www.github.com/adivea/Leaflet">Interactive Maps in R</a></td></tr>
+	<tr><td>Fri 10 Dec</td><td><a href="https://www.github.com/adivea/Leaflet">Interactive Maps in R</a></td></tr>
 	<tr><td>END</td><td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey</a></td>
       </tr>
      </table>
